@@ -1,2 +1,2 @@
-Remove patches missing from debian/patches/series.
+Remove patches three that are missing from debian/patches/series.
 Fixed-Lintian-Tags: patch-file-present-but-not-mentioned-in-series
